Corrected concurrent modification bug in logs.